deploy_sample/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demopod3
  labels:
    app: nginx
spec:
  containers:
  - name: demopod
    image: nginx
    ports: 
    - containerPort: 80
  nodeSelector:
    tier: frontend
