deploy_sample/demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: node-js-deploy
  name: node-js-deploy
spec:
  strategy: 
    type: Recreate
  replicas: 5
  selector:
    matchLabels:
      name: node-js-deploy
  template:
    metadata:
      labels:
        name: node-js-deploy
    spec:
      containers:
      - image: jonbaier/pod-scaling:0.1
        name: node-js-deploy
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: node-js-deploy
  labels:
    name: node-js-deploy
spec:
  type: LoadBalancer
  ports:
  - port: 80
  sessionAffinity: ClientIP
  selector:
    name: node-js-deploy
