deploy_sample/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsvc
spec:
  selector:
    app: web
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
