deploy_sample/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
spec:
  selector:
    app: apache
  ports:
  - port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
  - port: 80
