deploy_sample/nodejs_with_probe.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-js
spec:
  selector:
    name: node-js
  ports:
  - port: 80
  type: NodePort
